# recognise-your-own-face

./: CMakeLists.txt  at.txt
face-rec/: rec-your-own-face.cpp  take_photos.cpp  train.cpp
